sfdx-source/force-app/main/default/objects/Tier_Calculation_Data__mdt/Tier_Calculation_Data__mdt.object-meta.xml
<CustomObject>
    <description>Data stored will be used to calculate the Tier level for DPEI product.</description>
    <label>Tier Calculation Data</label>
    <pluralLabel>Tier Calculation Datas</pluralLabel>
</CustomObject>