sfdx-source/force-app/main/default/objects/Tier_Calculation_Data__mdt/fields/Data_Type_Of_Field_On_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Data_Type_Of_Field_On_Quote_Line__c</fullName>
    <label>Data Type of Field on Quote Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Multi Picklist</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>