sfdx-source/force-app/main/default/objects/Tier_Calculation_Data__mdt/fields/Eligible_Products_for_Tier_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Products_for_Tier_Calculation__c</fullName>
    <label>Eligible Products for Tier Calculation</label>
    <referenceTo>Eligible_Products_for_Tier_Calculation__mdt</referenceTo>
    <relationshipLabel>Tier Calculation Data</relationshipLabel>
    <relationshipName>Tier_Calculation_Datas</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>