sfdx-source/force-app/main/default/objects/Tier_Calculation_Data__mdt/fields/Maximum_Value__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Value__c</fullName>
    <label>Maximum Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>