sfdx-source/force-app/main/default/objects/Tier_Calculation_Data__mdt/fields/Minimum_Value__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Value__c</fullName>
    <label>Minimum Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>