sfdx-source/force-app/main/default/objects/Tier_Calculation_Data__mdt/fields/Quote_Line_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Field_API_Name__c</fullName>
    <label>Quote Line Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>