sfdx-source/force-app/main/default/objects/Tier_Calculation_Data__mdt/fields/Scorecard__c.field-meta.xml
<CustomField>
    <fullName>Scorecard__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Scorecard</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>